wrap up the pages and bug fixes navigating pages

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -141,7 +141,7 @@
 
 #feedback_form textarea{
 	font: 14px "Comic Sans MS", cursive, sans-serif;
-	width: 350px;
+	width: 300px;
 	color: #000;
 	border: 0;
 	border-bottom: 2px solid #000;
@@ -172,4 +172,12 @@
 	float: right;
 }
 
-
+/* mobile view */
+@media only screen and (max-width: 800px) {
+	#feedback_form textarea {
+	 width: 60vw;
+	}
+	#feedback_form input[type=text]{
+	 width: 60vw;
+	}
+}
